@@ -5,6 +5,8 @@ using System.Text;
 
 namespace Frosty_Cheeks
 {
+    /*AUTHOR: JOH of the JUNGLE
+     3-15-15*/
     //Collectable powerup that increases the length of player's shorts. Decreaes cold
     class LongerPowerup : Powerup
     {
