@@ -5,6 +5,8 @@ using System.Text;
 
 namespace Frosty_Cheeks
 {
+    /*AUTHOR: JOH of the JUNGLE
+     3-15-15*/
     //Collectable power up that decreases the lenght of player's shorts. Increaes cold
     class ShorterPowerup : Powerup
     {
